# agentic-dev-template-python

./: pyproject.toml
.claude/: boot.md
.claude/agents/: reviewer.md
.codex/: boot.md
.github/workflows/: ci.yml
context/: progress.md  review-log.md
policies/: quality_gates.md  stack.md
